Implement updating habits and begginig of a habit entry. Added CI/CD for angular
